--- a/learning_typescript/index.html
+++ b/learning_typescript/index.html
@@ -74,127 +74,131 @@
         </p>
         <br/>
         <div class="row">
-            <div class="col-sm-3">
-                <h4>1. Introducting TypeScript</h4>
-                <p>
-                    Get familiar with the TypeScript basics.
-                    This chapter explores the purpose, main features
-                    and benefits of the TypeScript programming language.
-                </p>
-            </div>
-            <div class="col-sm-3">
-                <h4>2. Working with types</h4>
-                <p>
-                    Learn how to make the most out of the TyeScript type anotations
-                    and its type inferance system. This chapter will teach you how
-                    to use powerul features shuch as union types or mapped types.
-                </p>
-            </div>
-            <div class="col-sm-3">
-                <h4>3. Working with functions</h4>
-                <p>
-                    Learn how to work with functions in depth. This chapter
-                    will teach you how to take adventage of the power of 
-                    functions and asynchronous programming in TypeScript.
-                </p>
-            </div>
-            <div class="col-sm-3">
-                <h4>4. Object-Oriented Programming with TypeScript</h4>
-                <p>
-                    Learn the core concepts of the Object-Oriented Programming (OOP)
-                    paradigm shuch us polimorfisim, inheritance or encapsulation.
-                    This chapter also explores some OOP best practices shuch as
-                    the SOLID principles.
-                </p>
-            </div>
-            <div class="col-sm-3">
-                <h4>5. Working with dependencies</h4>
-                <p>
-                    Learn how to work with application dependencies
-                    and third party dependencies as well as type definitions.
-                    This chapter explores multiple module systems such as
-                    CommonJS or ES6 modules and concepts like dependey
-                    injection.
-                </p>
-            </div>
-            <div class="col-sm-3">
-                <h4>6. Understanding the runtime</h4>
-                <p>
-                    Learn how the JavaScript runtime works and gain
-                    a good understanding of concepts such us the event
-                    loop, closures r hoisting.
-                </p>
-            </div>
-            <div class="col-sm-3">
-                <h4>7. Functional Programming with TypeScript</h4>
-                <p>
-                    Learn the core building blocks of the functional
-                    programing paradigm, including concepts such us
-                    function composition, function partial application
-                    or referential transparency.
-                </p>
-            </div>
-            <div class="col-sm-3">
-                <h4>8. Working with decorators</h4>
-                <p>
-                    Learn how to cosume or declare decorators and how
-                    to use the decorators to create and read metadata
-                    that can be used to power tools such as testing
-                    frameworks or inversion of control containers.
-                </p>
-            </div>
-            <div class="col-sm-3">
-                <h4>Chapter 9. Automating your development workflow</h4>
-                <p>
-                    Learn how to automate certain task of your development
-                    workflow and reduce the number of integration issues
-                    using tools such as TsLint, Webpack, Gulp and npm scripts.
-                </p>
-            </div>
-            <div class="col-sm-3">
-                <h4>10. Application performance</h4>
-                <p>
-                    Learn how the availablility of resources can affect
-                    the performance of a TypeScript application and how to
-                    use the Node.js inspector and the Chrome Development
-                    tools to analyze the performance of a TypeScript application.  
-                </p>
-            </div>
-            <div class="col-sm-3">
-                <h4>11. Application testing</h4>
-                <p>
-                    Learn how to implement automated tests like unit
-                    tests or end-to-end test powered by tools such as
-                    Mocha, Chai, Sinon, Supertest and Karma.
-                </p>
-            </div>
-            <div class="col-sm-3">
-                <h4>12. The TypeScript language services</h4>
-                <p>
-                    Learn how to leverage the TypeScript language
-                    services to create your own developent tools.
-                </p>
-            </div>
-            <div class="col-sm-3">
-                <h4>13. Backend development with Node.js and TypeScript</h4>
-                <p>
-                    Learn how to develop RESTful APIs
-                    powered by Node.js and TypeScript.
-                </p>
-            </div>
-            <div class="col-sm-3">
-                <h4>14. Frontend development with Angular and TypeScript</h4>
-                <p>
-                    Learn how to develop single-page web
-                    applications powered by Angular and TypeScript.
-                </p>
-            </div>
-            <div class="col-sm-3">
-                <h4>15. Frontend development with React and TypeScript</h4>
-                <p>
-                    Learn how to develop single-page web
-                    applications powered by React and TypeScript.
-                </p>
+            <div class="col-sm-10 offset-sm-1">
+                <div class="row chapters">
+                    <div class="col-xl-4">
+                        <h4>1. Introducting TypeScript</h4>
+                        <p>
+                            Get familiar with the TypeScript basics.
+                            This chapter explores the purpose, main features
+                            and benefits of the TypeScript programming language.
+                        </p>
+                    </div>
+                    <div class="col-xl-4">
+                        <h4>2. Working with types</h4>
+                        <p>
+                            Learn how to make the most out of the TyeScript type anotations
+                            and its type inferance system. This chapter will teach you how
+                            to use powerul features shuch as union types or mapped types.
+                        </p>
+                    </div>
+                    <div class="col-xl-4">
+                        <h4>3. Working with functions</h4>
+                        <p>
+                            Learn how to work with functions in depth. This chapter
+                            will teach you how to take adventage of the power of 
+                            functions and asynchronous programming in TypeScript.
+                        </p>
+                    </div>
+                    <div class="col-xl-4">
+                        <h4>4. Object-Oriented Programming with TypeScript</h4>
+                        <p>
+                            Learn the core concepts of the Object-Oriented Programming (OOP)
+                            paradigm shuch us polimorfisim, inheritance or encapsulation.
+                            This chapter also explores some OOP best practices shuch as
+                            the SOLID principles.
+                        </p>
+                    </div>
+                    <div class="col-xl-4">
+                        <h4>5. Working with dependencies</h4>
+                        <p>
+                            Learn how to work with application dependencies
+                            and third party dependencies as well as type definitions.
+                            This chapter explores multiple module systems such as
+                            CommonJS or ES6 modules and concepts like dependey
+                            injection.
+                        </p>
+                    </div>
+                    <div class="col-xl-4">
+                        <h4>6. Understanding the runtime</h4>
+                        <p>
+                            Learn how the JavaScript runtime works and gain
+                            a good understanding of concepts such us the event
+                            loop, closures r hoisting.
+                        </p>
+                    </div>
+                    <div class="col-xl-4">
+                        <h4>7. Functional Programming with TypeScript</h4>
+                        <p>
+                            Learn the core building blocks of the functional
+                            programing paradigm, including concepts such us
+                            function composition, function partial application
+                            or referential transparency.
+                        </p>
+                    </div>
+                    <div class="col-xl-4">
+                        <h4>8. Working with decorators</h4>
+                        <p>
+                            Learn how to cosume or declare decorators and how
+                            to use the decorators to create and read metadata
+                            that can be used to power tools such as testing
+                            frameworks or inversion of control containers.
+                        </p>
+                    </div>
+                    <div class="col-xl-4">
+                        <h4>Chapter 9. Automating your development workflow</h4>
+                        <p>
+                            Learn how to automate certain task of your development
+                            workflow and reduce the number of integration issues
+                            using tools such as TsLint, Webpack, Gulp and npm scripts.
+                        </p>
+                    </div>
+                    <div class="col-xl-4">
+                        <h4>10. Application performance</h4>
+                        <p>
+                            Learn how the availablility of resources can affect
+                            the performance of a TypeScript application and how to
+                            use the Node.js inspector and the Chrome Development
+                            tools to analyze the performance of a TypeScript application.  
+                        </p>
+                    </div>
+                    <div class="col-xl-4">
+                        <h4>11. Application testing</h4>
+                        <p>
+                            Learn how to implement automated tests like unit
+                            tests or end-to-end test powered by tools such as
+                            Mocha, Chai, Sinon, Supertest and Karma.
+                        </p>
+                    </div>
+                    <div class="col-xl-4">
+                        <h4>12. The TypeScript language services</h4>
+                        <p>
+                            Learn how to leverage the TypeScript language
+                            services to create your own developent tools.
+                        </p>
+                    </div>
+                    <div class="col-xl-4">
+                        <h4>13. Backend development with Node.js and TypeScript</h4>
+                        <p>
+                            Learn how to develop RESTful APIs
+                            powered by Node.js and TypeScript.
+                        </p>
+                    </div>
+                    <div class="col-xl-4">
+                        <h4>14. Frontend development with Angular and TypeScript</h4>
+                        <p>
+                            Learn how to develop single-page web
+                            applications powered by Angular and TypeScript.
+                        </p>
+                    </div>
+                    <div class="col-xl-4">
+                        <h4>15. Frontend development with React and TypeScript</h4>
+                        <p>
+                            Learn how to develop single-page web
+                            applications powered by React and TypeScript.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -243,10 +247,11 @@
             </div>
             <div class="col-sm-5">
                 <div id="gallery">
-                    <img class="profile" src="http://www.remojansen.com/website/assets/me.png" />
-                    <img class="profile" src="./1.jpeg" />
-                    <img class="profile" src="./2.jpeg" />
-                    <img class="profile" src="./3.jpeg" />
+                    <img alt="Remo H. Jansen" title="Remo H. Jansen" class="profile" src="http://www.remojansen.com/website/assets/me.png" />
+                    <img alt="Remo H. Jansen at a Dublin TypeScript Meetup event" title="Remo H. Jansen at a Dublin TypeScript Meetup event" class="profile" src="./1.jpeg" />
+                    <img alt="Remo H. Jansen with Anders Hejlsberg" title="Remo H. Jansen with Anders Hejlsberg" class="profile" src="./2.jpeg" />
+                    <img alt="Remo H. Jansen at a Dublin GDC event" title="Remo H. Jansen at a Dublin GDC event" class="profile" src="./3.jpeg" />
+                    <img alt="Remo H. Jansen with his first Microsoft MVP award (2016)" title="Remo H. Jansen with his first Microsoft MVP award (2016)" class="profile" src="./4.jpeg" />
                 </div>
             </div>
         </div>
