--- a/learning_typescript/index.html
+++ b/learning_typescript/index.html
@@ -11,6 +11,9 @@
     <meta property="og:type" content="books.book" />
     <meta property="og:url" content="http://www.learningtypescript.com/" />
     <meta property="og:image" content="http://www.learningtypescript.com/og.png" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@remohjansen" />
+    <meta name="twitter:creator" content="@remohjansen" />
     <title>Learning TypeScript 2.x (Second Edition) - A Packt Publishing book by Remo H. Jansen</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -243,6 +246,12 @@
                             twitter.com/RemoHJansen
                         </a>
                     </li>
+                    <li>
+                        <a href="https://github.com/remojansen" class="social-link">
+                            <i class="fa fa-github" aria-hidden="true"></i>
+                            github.com/remojansen
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="col-sm-5">
@@ -344,7 +353,8 @@
     </div>
     <div class="center">
         <p>
-            &copy; 2018 Remo H. Jansen - All Rights Reserved
+            &copy; 2018 Remo H. Jansen<br/>
+            All Rights Reserved
         </p>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
