--- a/learning_typescript/index.html
+++ b/learning_typescript/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="books.book" />
     <meta property="og:url" content="http://www.learningtypescript.com/" />
     <meta property="og:image" content="http://www.learningtypescript.com/og.png" />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@remohjansen" />
     <meta name="twitter:creator" content="@remohjansen" />
     <title>Learning TypeScript 2.x (Second Edition) - A Packt Publishing book by Remo H. Jansen</title>
