--- a/learning_typescript/index.html
+++ b/learning_typescript/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./index.css">
+    <meta property="fb:app_id" content="1548004218582559" />
     <meta property="og:title" content="Learning TypeScript 2.x (Second Edition) - A Packt Publishing book by Remo H. Jansen" />
     <meta property="og:description" content="Exploit the features of TypeScript to develop and maintain captivating web applications with ease." />
     <meta property="og:type" content="books.book" />
