--- a/learning_typescript/index.html
+++ b/learning_typescript/index.html
@@ -63,25 +63,25 @@
     <div class="zebra">
         <div class="title">About the book</div>
         <p>
-            This book is a end-to-end guide to TypeScript 2.x and its entire ecosystem.
-            You will start off by understanding the TypeScript type system, functions, 
-            asyncrhonous programing, the runtime, decorators and much more with the
-            help of practical examples. Following this, you will learn about both the
-            object-oriented programming (OOP) and the functional programming (FP) paradigms
-            as well as both frontend development (React and Angular) and backend
-            development (Node.js and Express). Finally, you will learn how to some of
-            the most popular automation tools in the TypeScript ecosystem such as Webpack. 
-        </p>
-        <p>
-            By the end of this book, you will have learned enough to to build a fullstack
-            TypeScript web application from scratch.
+            This book is a end-to-end guide to TypeScript 2.x and its entire
+            ecosystem. You will start off by understanding the TypeScript
+            type system, the runtime, functions, asynchronous programing,
+            decorators and much more with the help of practical examples.
+            Following this, you will learn about both the object-oriented
+            programming and functional programming paradigms as well as
+            both frontend development, with React and Angular, and backend
+            development, with Node.js and Express. Finally, you will learn
+            how to use some of the most popular  tools in the TypeScript
+            ecosystem such as Webpack, npm and Visual Studio Code. By the
+            end of this book, you will have learned enough to build a
+            fullstack TypeScript web application from scratch.
         </p>
         <br/>
         <div class="row">
             <div class="col-sm-10 offset-sm-1">
                 <div class="row chapters">
                     <div class="col-xl-4">
-                        <h4>1. Introducting TypeScript</h4>
+                        <h4>1. Introducing TypeScript</h4>
                         <p>
                             Get familiar with the TypeScript basics.
                             This chapter explores the purpose, main features
@@ -91,16 +91,16 @@
                     <div class="col-xl-4">
                         <h4>2. Working with types</h4>
                         <p>
-                            Learn how to make the most out of the TyeScript type anotations
-                            and its type inferance system. This chapter will teach you how
-                            to use powerul features shuch as union types or mapped types.
+                            Learn how to make the most out of the TypeScript type annotations
+                            and its type inference system. This chapter will teach you how
+                            to use poweful features such as union types or mapped types.
                         </p>
                     </div>
                     <div class="col-xl-4">
                         <h4>3. Working with functions</h4>
                         <p>
                             Learn how to work with functions in depth. This chapter
-                            will teach you how to take adventage of the power of 
+                            will teach you how to take advantage of the power of 
                             functions and asynchronous programming in TypeScript.
                         </p>
                     </div>
@@ -108,8 +108,8 @@
                         <h4>4. Object-Oriented Programming with TypeScript</h4>
                         <p>
                             Learn the core concepts of the Object-Oriented Programming (OOP)
-                            paradigm shuch us polimorfisim, inheritance or encapsulation.
-                            This chapter also explores some OOP best practices shuch as
+                            paradigm such as polymorphism, inheritance or encapsulation.
+                            This chapter also explores some OOP best practices such as
                             the SOLID principles.
                         </p>
                     </div>
@@ -119,7 +119,7 @@
                             Learn how to work with application dependencies
                             and third party dependencies as well as type definitions.
                             This chapter explores multiple module systems such as
-                            CommonJS or ES6 modules and concepts like dependey
+                            CommonJS or ES6 modules and concepts like dependency
                             injection.
                         </p>
                     </div>
@@ -127,23 +127,23 @@
                         <h4>6. Understanding the runtime</h4>
                         <p>
                             Learn how the JavaScript runtime works and gain
-                            a good understanding of concepts such us the event
-                            loop, closures r hoisting.
+                            a good understanding of concepts such as the event
+                            loop, closures and hoisting.
                         </p>
                     </div>
                     <div class="col-xl-4">
                         <h4>7. Functional Programming with TypeScript</h4>
                         <p>
                             Learn the core building blocks of the functional
-                            programing paradigm, including concepts such us
+                            programing paradigm, including concepts such as
                             function composition, function partial application
-                            or referential transparency.
+                            and referential transparency.
                         </p>
                     </div>
                     <div class="col-xl-4">
                         <h4>8. Working with decorators</h4>
                         <p>
-                            Learn how to cosume or declare decorators and how
+                            Learn how to apply and declare decorators and how
                             to use the decorators to create and read metadata
                             that can be used to power tools such as testing
                             frameworks or inversion of control containers.
@@ -160,7 +160,7 @@
                     <div class="col-xl-4">
                         <h4>10. Application performance</h4>
                         <p>
-                            Learn how the availablility of resources can affect
+                            Learn how the availability of system resources can affect
                             the performance of a TypeScript application and how to
                             use the Node.js inspector and the Chrome Development
                             tools to analyze the performance of a TypeScript application.  
@@ -178,25 +178,25 @@
                         <h4>12. The TypeScript language services</h4>
                         <p>
                             Learn how to leverage the TypeScript language
-                            services to create your own developent tools.
+                            services to create your own development tools.
                         </p>
                     </div>
                     <div class="col-xl-4">
-                        <h4>13. Backend development with Node.js and TypeScript</h4>
+                        <h4>13. Back-end development with Node.js and TypeScript</h4>
                         <p>
                             Learn how to develop RESTful APIs
                             powered by Node.js and TypeScript.
                         </p>
                     </div>
                     <div class="col-xl-4">
-                        <h4>14. Frontend development with Angular and TypeScript</h4>
+                        <h4>14. Front-end development with Angular and TypeScript</h4>
                         <p>
                             Learn how to develop single-page web
                             applications powered by Angular and TypeScript.
                         </p>
                     </div>
                     <div class="col-xl-4">
-                        <h4>15. Frontend development with React and TypeScript</h4>
+                        <h4>15. Front-end development with React and TypeScript</h4>
                         <p>
                             Learn how to develop single-page web
                             applications powered by React and TypeScript.
@@ -211,17 +211,17 @@
         <div class="row">
             <div class="col-sm-7">
                 <p>
-                    Remo H. Jansen is a Microsof MVP, fullstack JavaScript and TypeScript engineer, 
+                    Remo H. Jansen is a Microsoft MVP, fullstack JavaScript and TypeScript engineer, 
                     open source contributor, entrepreneur, technology lover, gamer, and Internet enthusiast.
                     Remo is originally from Seville, Spain, but currently lives in Dublin, Ireland, 
                     where he has a full-time job in the aviation finance industry.
                 </p>
                 <p>
-                    Remo is the author of InversifyJS and has been working on large-scale
-                    JavaScript applications for 10 years, from flight booking engines to
-                    investment management solutions. Remo is an active member of the
-                    TypeScript community, he is organizer of the Dublin TypeScript and
-                    Dublin Open Source meetups.
+                    Remo is the author of InversifyJS (an open source inversion of control container
+                    for TypeScript) and has been working on large-scale JavaScript applications for
+                    10 years, from flight booking engines to investment management solutions. Remo
+                    is an active member of the TypeScript community, he is organizer of the Dublin
+                    TypeScript and Dublin Open Source meetups.
                 </p>
                 <p>
                     Remo has previously worked on other Packt Publishing titles:
@@ -281,7 +281,7 @@
                 <div class="quote">
                     <p>
                         "I am a senior JavaScript developer and developed in
-                        action script 3 for many years so typing was not
+                        actionscript 3 for many years so typing was not
                         something new to me, but I was still able to pick up
                         a lot of good information such as generators reflection
                         and more!"
@@ -320,7 +320,7 @@
                 </div>
             </div>
         </div>
-        <div class="footnote">Source: Amazon verified user reviews</div>
+        <div class="footnote">Source: Amazon user reviews</div>
     </div>
     <div class="zebra center">
         <div class="title">Order Now</div>
