--- a/learning_typescript/index.html
+++ b/learning_typescript/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Exploit the features of TypeScript to develop and maintain captivating web applications with ease." />
     <meta property="og:type" content="books.book" />
     <meta property="og:url" content="http://www.learningtypescript.com/" />
-    <meta property="og:image" content="http://www.learningtypescript.com/og.png" />
+    <meta property="og:image" content="http://www.learningtypescript.com/social_media_tile.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@remohjansen" />
     <meta name="twitter:creator" content="@remohjansen" />
@@ -52,11 +52,8 @@
                     Kobo
                 </a>
             </div>
-            <div class="col-sm">
-                <div class="libro">
-                    <span></span>
-                    <img src="https://www.packtpub.com/sites/default/files/B08005_MockupCover.png" alt="" />
-                </div>
+            <div class="col-sm cover">
+                <img src="./learning-typescript-cover-TRANSPARENT.png" alt="learning-typescript" />
             </div>
         </div>
     </div>
@@ -158,7 +155,28 @@
                         </p>
                     </div>
                     <div class="col-xl-4">
-                        <h4>10. Application performance</h4>
+                        <h4>10. Back-end development with Node.js and TypeScript</h4>
+                        <p>
+                            Learn how to develop RESTful APIs
+                            powered by Node.js and TypeScript.
+                        </p>
+                    </div>
+                    <div class="col-xl-4">
+                        <h4>11. Front-end development with Angular and TypeScript</h4>
+                        <p>
+                            Learn how to develop single-page web
+                            applications powered by Angular and TypeScript.
+                        </p>
+                    </div>
+                    <div class="col-xl-4">
+                        <h4>12. Front-end development with React and TypeScript</h4>
+                        <p>
+                            Learn how to develop single-page web
+                            applications powered by React and TypeScript.
+                        </p>
+                    </div>
+                    <div class="col-xl-4">
+                        <h4>13. Application performance</h4>
                         <p>
                             Learn how the availability of system resources can affect
                             the performance of a TypeScript application and how to
@@ -167,7 +185,7 @@
                         </p>
                     </div>
                     <div class="col-xl-4">
-                        <h4>11. Application testing</h4>
+                        <h4>14. Application testing</h4>
                         <p>
                             Learn how to implement automated tests like unit
                             tests or end-to-end test powered by tools such as
@@ -175,31 +193,10 @@
                         </p>
                     </div>
                     <div class="col-xl-4">
-                        <h4>12. The TypeScript language services</h4>
+                        <h4>15. The TypeScript language services</h4>
                         <p>
                             Learn how to leverage the TypeScript language
                             services to create your own development tools.
-                        </p>
-                    </div>
-                    <div class="col-xl-4">
-                        <h4>13. Back-end development with Node.js and TypeScript</h4>
-                        <p>
-                            Learn how to develop RESTful APIs
-                            powered by Node.js and TypeScript.
-                        </p>
-                    </div>
-                    <div class="col-xl-4">
-                        <h4>14. Front-end development with Angular and TypeScript</h4>
-                        <p>
-                            Learn how to develop single-page web
-                            applications powered by Angular and TypeScript.
-                        </p>
-                    </div>
-                    <div class="col-xl-4">
-                        <h4>15. Front-end development with React and TypeScript</h4>
-                        <p>
-                            Learn how to develop single-page web
-                            applications powered by React and TypeScript.
                         </p>
                     </div>
                 </div>
@@ -289,7 +286,7 @@
                 </div>
                 <div class="quote">
                     <p>
-                        "Don't walk but run and get this book! TypeScript is
+                        "Don"t walk but run and get this book! TypeScript is
                         without a doubt the future of JavaScript. You will
                         learn how to bring structure to Javascript to ease
                         your development with making large scale applications"
@@ -307,7 +304,7 @@
                 <div class="quote">
                     <p>
                         "WOW! I picked this book up using my Packt subscription and
-                        can't put it down. The material flows and is easy to follow
+                        can"t put it down. The material flows and is easy to follow
                         along with, I never used Typescript before but found it
                         EXTREMELY USEFUL in web application development"
                     </p>
@@ -315,7 +312,7 @@
                 <div class="quote">
                     <p>
                         "The book deserves five stars because it pre-much covers everything.
-                        I'm sure this book is going to pick up an audience"
+                        I"m sure this book is going to pick up an audience"
                     </p>
                 </div>
             </div>
@@ -328,9 +325,8 @@
             Exploit the features of TypeScript to develop and maintain captivating web applications with ease.
         </p>
         <br/>
-        <div class="libro">
-            <span></span>
-            <img src="https://www.packtpub.com/sites/default/files/B08005_MockupCover.png" alt="" />
+        <div class="ordernow">
+            <img src="./learning-typescript-cover-TRANSPARENT.png" alt="learning-typescript" />
         </div>
         <br/>
         <br/>
@@ -361,6 +357,13 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113692374-1"></script>
     <script src="./main.js"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag("js", new Date());
+        gtag("config", "UA-113692374-1");
+    </script>
   </body>
 </html>
