--- a/public/404.html
+++ b/public/404.html
@@ -6,15 +6,15 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#3b0083" />
     <meta property="og:url" content="https://www.remojansen.com/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Remo H. Jansen - Professional Full-Stack Web Engineer " />
-    <meta property="og:description" content="I'm a full-stack web engineering tech lead and the managing director  Wolk Software. I am originally from Seville (Spain), but I have been living in Dublin (Ireland) since 2010. I'm the author of several books on TypeScript and is a former Microsoft MVP." />
+    <meta property="og:title" content="Remo H. Jansen  — Former Microsoft MVP, CEO & Founder at Wolk Software" />
+    <meta property="og:description" content="Empowering digital product teams to thrive — Former Microsoft MVP, CEO & Founder at Wolk Software, EP at JSDayIE, published author and creator of InversifyJS" />
     <meta property="og:image" content="https://www.remojansen.com/facebook-thumbnail.png" />
-    <meta name="description" content="I'm a full-stack web engineering tech lead and the managing director  Wolk Software. I am originally from Seville (Spain), but I have been living in Dublin (Ireland) since 2010. I'm the author of several books on TypeScript and is a former Microsoft MVP.">
+    <meta name="description" content="Empowering digital product teams to thrive — Former Microsoft MVP, CEO & Founder at Wolk Software, EP at JSDayIE, published author and creator of InversifyJS">
     <meta name="author" content="Remo H. Jansen">
-    <meta name="keywords" content="web, development, software, engineer, react, microsoft, mvp, javascript, devops, tech, lead, architect, dublin, ireland, typescript, azure, node.js">
+    <meta name="keywords" content="CEO, CTO, web, development, software, engineer, react, microsoft, mvp, javascript, devops, tech, lead, architect, dublin, ireland, typescript, azure, node.js">
     <title>Remo H. Jansen - Professional Full-Stack Web Engineer</title>
     <script async="" src="https//www.google-analytics.com/analytics.js"></script><script type="application/ld+json">
     {
