--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <meta name="author" content="Remo H. Jansen">
         <meta name="theme-color" content="#3b0083">
         
+        <!-- Favicon -->
+        <link rel="icon" type="image/png" href="assets/images/favicon.png">
+        
         <!-- Open Graph / Facebook -->
         <meta property="og:url" content="https://www.remojansen.com">
         <meta property="og:type" content="website">
