--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
     </head>
     <body>
         <div id="container"></div>
-        <script src="dist/main.global.js"></script>
+        <script src="dist/index.global.js"></script>
     </body>
 </html>
